# risk-routing-verifier-objective

./: .env.example  .gitattributes  .gitignore  .nfscec5313f8ba574a200001527  ABLATIONS.md  EXPERIMENT_TRACKER.md  METHODOLOGY.md  README.md  RESULTS.md  RUN.md  RUNNING_INSTRUCTIONS.md  SETUP_INSTRUCTIONS.md  bc_commands  commands_used  heuristic_verifier_presentation.md  next_steps.md  nohup.out  proposal.md  pyproject.toml  requirements.txt  router.md  router_exp.sh  router_exp.sh.sh  router_taining_old.out  run_ablations.sh  run_ablations_new.sh  run_bc_training.sh  run_collect_preferences.sh  run_dpo_humaneval.sh  run_pipeline.sh  run_pipeline_updated.sh  run_score_cpu.sh  run_verifier_training.sh  solution.py
configs/: base.yaml  mrp.yaml  smoke_test.yaml  smoke_test_swebench.yaml  smoke_test_webarena.yaml
configs/alfworld/: clean.yaml  noisy.yaml
configs/gaia/: clean.yaml  noisy.yaml
configs/humaneval/: clean.yaml  noisy.yaml  noisy.yaml.bak
configs/rtlrepair/: clean.yaml  noisy.yaml
configs/swebench/: clean.yaml  noisy.yaml
configs/terminalbench/: clean.yaml  gpt52.yaml  noisy.yaml
configs/textworld/: clean.yaml  noisy.yaml
configs/webarena/: clean.yaml  noisy.yaml
docs/: router_feature_literature_review.md  verifier_papers_summary.md
logs/: collect_preferences_nohup.out
r2v/: __init__.py
r2v/agent/: __init__.py  budget.py  r2v_agent.py
r2v/data/: __init__.py  datasets.py  labeling.py  registry.py  splits.py  trajectory.py
router_dataset/: unified_router_features.summary.json
scripts/: __init__.py  auto_run_features.sh  batch_evaluate_swebench.py  build_router_dataset.py  collect_trajectories.py  convert_hf_trajectories.py  create_textworld_val_split.py  eval_heuristic_verifier.py  evaluate.py  fetch_ablation_data.sh  fetch_gdrive_artifacts.sh  generate_candidates.py  generate_candidates_heuristic.py  generate_perturbations.py  generate_router_features.py  launch_candidates.sh  launch_router_features.sh  merge_bc_for_verifier.py  merge_trajectories.py  plot_paper_figures_v2.py  plot_router_experiments.py  rank_router_checkpoints.py  rebuild_metrics_csv.py  run_ablations.py  run_paper_experiments.sh  run_router_experiments.sh  run_router_features_humaneval.sh  save_preference_splits.py  save_static_splits.py  setup_webarena_docker.sh  slurm_end_to_end.sh  terminus_scaffold.py  train_policy.py  train_router.py  train_verifier.py
temp_data/: perturbation_log.jsonl  textworld_test.jsonl  textworld_train.jsonl  textworld_val.jsonl
(+1728 files in other folders)
